// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`genesis provider works Asset Hub Kusama > genesis provider works > build blocks 1`] = `"Statemine Chopsticks"`;

exports[`genesis provider works Kusama > genesis provider works > build blocks 1`] = `"Parity-kusama Chopsticks"`;

exports[`genesis provider works Kusama > genesis provider works > handles tx 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": 0,
    "free": 1000000000000000,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`genesis provider works Kusama > genesis provider works > handles tx 2`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": 876999432127266,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`genesis provider works Kusama > genesis provider works > handles tx 3`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": 123000000000000,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`genesis provider works Mandala > genesis provider works > build blocks 1`] = `"Mandala Chopsticks"`;

exports[`genesis provider works Mandala > genesis provider works > handles tx 1`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 1000000000000000,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`genesis provider works Mandala > genesis provider works > handles tx 2`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 876982732391839,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`genesis provider works Mandala > genesis provider works > handles tx 3`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 123000000000000,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;
